fixing z-index of nav-side bar

--- a/paralax-css/css/style.css
+++ b/paralax-css/css/style.css
@@ -8,7 +8,8 @@
 }
 
 body {
-/*  margin: 0 auto;
+
+  margin: 0 auto;
   text-align: center;
   overflow: hidden;
   cursor: default;
@@ -22,7 +23,7 @@ body {
   line-height: 1.5;
   color: #fff;
   -webkit-font-smoothing: antialiased;
-  text-shadow: 1px 1px 1px rgba(0,0,0,0.004);*/
+  text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
 
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -55,10 +56,22 @@ div.centered {
   padding-bottom: 150px;
 }
 
+.parallax {
+/*  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+  padding-bottom: 150px;*/
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: auto;
+  perspective: 300px;
+}
+
 nav {
   z-index: 2;
-
-  height: 60px;
+  background-color: black;
+  height: 50px;
 }
 
 ul {
@@ -176,12 +189,12 @@ p {
  transform: translate(-50%, -50%);
 }
 
-.parallax {
+/*.parallax {
   height: 100vh;
   overflow-x: hidden;
   overflow-y: auto;
   perspective: 300px;
-}
+}*/
 
 .parallax_layer {
   position: absolute;
